feat: create add account api
