# src/routes/account.routes.js
@@ -4,4 +4,6 @@ const accountController = require('../controllers/account.controller');
 
 router.get('/getAccounts', accountController.getAllAccounts);
 
+router.post('/addAccount', accountController.addAccount);
+
 module.exports = router;
